[gd_scene load_steps=3 format=3 uid="uid://dj2qxcocgvsi7"]

[ext_resource type="Texture2D" uid="uid://dhh4q7dqv2c3c" path="res://assets/images/seven_segment.png" id="1_jrx5g"]
[ext_resource type="Script" path="res://scripts/seven_segment_display.gd" id="1_so3qs"]

[node name="SevenSegmentDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_so3qs")

[node name="SegmentA" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 112.0
offset_bottom = 32.0
texture = ExtResource("1_jrx5g")

[node name="SegmentB" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 16.0
offset_right = 224.0
offset_bottom = 48.0
rotation = 1.5708
texture = ExtResource("1_jrx5g")

[node name="SegmentC" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 112.0
offset_right = 224.0
offset_bottom = 144.0
rotation = 1.5708
texture = ExtResource("1_jrx5g")

[node name="SegmentD" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 112.0
offset_bottom = 224.0
texture = ExtResource("1_jrx5g")

[node name="SegmentE" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 112.0
offset_right = 128.0
offset_bottom = 144.0
rotation = 1.5708
texture = ExtResource("1_jrx5g")

[node name="SegmentF" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 48.0
rotation = 1.5708
texture = ExtResource("1_jrx5g")

[node name="SegmentG" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 128.0
texture = ExtResource("1_jrx5g")
